lib/pdfio_bindings_generated.dart


  ffi.Pointer<pdfio_dict_t> pdfioDictCopy(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<pdfio_dict_t> dict,
  ) {
    return _pdfioDictCopy(
      pdf,
      dict,
    );
  }

  late final _pdfioDictCopyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_dict_t> Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<pdfio_dict_t>)>>('pdfioDictCopy');
  late final _pdfioDictCopy = _pdfioDictCopyPtr.asFunction<
      ffi.Pointer<pdfio_dict_t> Function(
          ffi.Pointer<pdfio_file_t>, ffi.Pointer<pdfio_dict_t>)>();

  ffi.Pointer<pdfio_dict_t> pdfioDictCreate(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioDictCreate(
      pdf,
    );
  }

  late final _pdfioDictCreatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_dict_t> Function(
              ffi.Pointer<pdfio_file_t>)>>('pdfioDictCreate');
  late final _pdfioDictCreate = _pdfioDictCreatePtr.asFunction<
      ffi.Pointer<pdfio_dict_t> Function(ffi.Pointer<pdfio_file_t>)>();

  ffi.Pointer<pdfio_array_t> pdfioDictGetArray(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _pdfioDictGetArray(
      dict,
      key,
    );
  }

  late final _pdfioDictGetArrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_array_t> Function(ffi.Pointer<pdfio_dict_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioDictGetArray');
  late final _pdfioDictGetArray = _pdfioDictGetArrayPtr.asFunction<
      ffi.Pointer<pdfio_array_t> Function(
          ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.UnsignedChar> pdfioDictGetBinary(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Int> length,
  ) {
    return _pdfioDictGetBinary(
      dict,
      key,
      length,
    );
  }

  late final _pdfioDictGetBinaryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(
              ffi.Pointer<pdfio_dict_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>)>>('pdfioDictGetBinary');
  late final _pdfioDictGetBinary = _pdfioDictGetBinaryPtr.asFunction<
      ffi.Pointer<ffi.UnsignedChar> Function(ffi.Pointer<pdfio_dict_t>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>)>();

  int pdfioDictGetBoolean(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _pdfioDictGetBoolean(
      dict,
      key,
    );
  }

  late final _pdfioDictGetBooleanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_dict_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioDictGetBoolean');
  late final _pdfioDictGetBoolean = _pdfioDictGetBooleanPtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>)>();

  int pdfioDictGetDate(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _pdfioDictGetDate(
      dict,
      key,
    );
  }

  late final _pdfioDictGetDatePtr = _lookup<
      ffi.NativeFunction<
          time_t Function(ffi.Pointer<pdfio_dict_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioDictGetDate');
  late final _pdfioDictGetDate = _pdfioDictGetDatePtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<pdfio_dict_t> pdfioDictGetDict(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _pdfioDictGetDict(
      dict,
      key,
    );
  }

  late final _pdfioDictGetDictPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_dict_t> Function(ffi.Pointer<pdfio_dict_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioDictGetDict');
  late final _pdfioDictGetDict = _pdfioDictGetDictPtr.asFunction<
      ffi.Pointer<pdfio_dict_t> Function(
          ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> pdfioDictGetName(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _pdfioDictGetName(
      dict,
      key,
    );
  }

  late final _pdfioDictGetNamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_dict_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioDictGetName');
  late final _pdfioDictGetName = _pdfioDictGetNamePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>)>();

  double pdfioDictGetNumber(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _pdfioDictGetNumber(
      dict,
      key,
    );
  }

  late final _pdfioDictGetNumberPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(ffi.Pointer<pdfio_dict_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioDictGetNumber');
  late final _pdfioDictGetNumber = _pdfioDictGetNumberPtr.asFunction<
      double Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<pdfio_obj_t> pdfioDictGetObj(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _pdfioDictGetObj(
      dict,
      key,
    );
  }

  late final _pdfioDictGetObjPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_obj_t> Function(ffi.Pointer<pdfio_dict_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioDictGetObj');
  late final _pdfioDictGetObj = _pdfioDictGetObjPtr.asFunction<
      ffi.Pointer<pdfio_obj_t> Function(
          ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<pdfio_rect_t> pdfioDictGetRect(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<pdfio_rect_t> rect,
  ) {
    return _pdfioDictGetRect(
      dict,
      key,
      rect,
    );
  }

  late final _pdfioDictGetRectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_rect_t> Function(
              ffi.Pointer<pdfio_dict_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<pdfio_rect_t>)>>('pdfioDictGetRect');
  late final _pdfioDictGetRect = _pdfioDictGetRectPtr.asFunction<
      ffi.Pointer<pdfio_rect_t> Function(ffi.Pointer<pdfio_dict_t>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<pdfio_rect_t>)>();

  ffi.Pointer<ffi.Char> pdfioDictGetString(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _pdfioDictGetString(
      dict,
      key,
    );
  }

  late final _pdfioDictGetStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_dict_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioDictGetString');
  late final _pdfioDictGetString = _pdfioDictGetStringPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>)>();

  int pdfioDictGetType(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _pdfioDictGetType(
      dict,
      key,
    );
  }

  late final _pdfioDictGetTypePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<pdfio_dict_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioDictGetType');
  late final _pdfioDictGetType = _pdfioDictGetTypePtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>)>();

  void pdfioDictIterateKeys(
    ffi.Pointer<pdfio_dict_t> dict,
    int cb,
    ffi.Pointer<ffi.Void> cb_data,
  ) {
    return _pdfioDictIterateKeys(
      dict,
      cb,
      cb_data,
    );
  }

  late final _pdfioDictIterateKeysPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<pdfio_dict_t>, ffi.Int,
              ffi.Pointer<ffi.Void>)>>('pdfioDictIterateKeys');
  late final _pdfioDictIterateKeys = _pdfioDictIterateKeysPtr.asFunction<
      void Function(ffi.Pointer<pdfio_dict_t>, int, ffi.Pointer<ffi.Void>)>();

  int pdfioDictSetArray(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<pdfio_array_t> value,
  ) {
    return _pdfioDictSetArray(
      dict,
      key,
      value,
    );
  }

  late final _pdfioDictSetArrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<pdfio_array_t>)>>('pdfioDictSetArray');
  late final _pdfioDictSetArray = _pdfioDictSetArrayPtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<pdfio_array_t>)>();

  int pdfioDictSetBinary(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.UnsignedChar> value,
    int valuelen,
  ) {
    return _pdfioDictSetBinary(
      dict,
      key,
      value,
      valuelen,
    );
  }

  late final _pdfioDictSetBinaryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.UnsignedChar>, ffi.Int)>>('pdfioDictSetBinary');
  late final _pdfioDictSetBinary = _pdfioDictSetBinaryPtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.UnsignedChar>, int)>();

  int pdfioDictSetBoolean(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<bool> value,
  ) {
    return _pdfioDictSetBoolean(
      dict,
      key,
      value,
    );
  }

  late final _pdfioDictSetBooleanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<bool>)>>('pdfioDictSetBoolean');
  late final _pdfioDictSetBoolean = _pdfioDictSetBooleanPtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<bool>)>();

  int pdfioDictSetDate(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
    int value,
  ) {
    return _pdfioDictSetDate(
      dict,
      key,
      value,
    );
  }

  late final _pdfioDictSetDatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
              time_t)>>('pdfioDictSetDate');
  late final _pdfioDictSetDate = _pdfioDictSetDatePtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>, int)>();

  int pdfioDictSetDict(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<pdfio_dict_t> value,
  ) {
    return _pdfioDictSetDict(
      dict,
      key,
      value,
    );
  }

  late final _pdfioDictSetDictPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<pdfio_dict_t>)>>('pdfioDictSetDict');
  late final _pdfioDictSetDict = _pdfioDictSetDictPtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<pdfio_dict_t>)>();

  int pdfioDictSetName(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _pdfioDictSetName(
      dict,
      key,
      value,
    );
  }

  late final _pdfioDictSetNamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('pdfioDictSetName');
  late final _pdfioDictSetName = _pdfioDictSetNamePtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  int pdfioDictSetNull(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _pdfioDictSetNull(
      dict,
      key,
    );
  }

  late final _pdfioDictSetNullPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_dict_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioDictSetNull');
  late final _pdfioDictSetNull = _pdfioDictSetNullPtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>)>();
